[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sast-blame"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A Python library for integrating Semgrep, GitLab, and GitHub APIs for SAST analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "semgrep>=1.34.0",
    "python-gitlab>=3.15.0",
    "PyGithub>=2.1.1",
    "requests>=2.31.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
